feat: github auth
